vendor/registry-40351f815f426200/remain/tests/ui/let-unstable.stderr
error: E::Bbb should sort before E::Ccc
  --> $DIR/let-unstable.rs:15:5
   |
15 |     #[sorted]
   |     ^^^^^^^^^
